--- a/border-outline.html
+++ b/border-outline.html
@@ -28,6 +28,7 @@
                 <a href="border-outline.html#border-radius">Propiedad border-radius</a>
             </li>
             <li><a href="border-outline.html#outline">Propiedad outline</a></li>
+            <li><a href="border-outline.html#estilos-fondo">Estilos del Fondo</a></li>
 
         </ol>
 
@@ -60,20 +61,46 @@
 
         <br>
         <a href="index.html#inicio" class="volver-inicio">◀️ Volver a pagina principal</a>
-        <a href="border-outline.html#inicio-bordes-outlines" class="volver-inicio">🔼 Ir a Bordes y outlines</a>
+        <a href="border-outline.html#inicio-bordes-outlines" class="volver-inicio">🔼 Ir a inicio Bordes y outlines</a>
         <hr>
     </article>
 
     <article id="outline">
         <h2>Propiedad outline</h2>
 
-
+        <p>
+            El outline se podria definir como un borde externo, pero no hace parte del box
+            model (modelo de caja) por eso la caja no aumenta de tamño al aplicarle el
+            outline.
+        </p>
+        <p>
+            Recibe las sihuientes propiedades:
+        <ul>
+            <li><code>outline-width</code></li>
+            <li><code>outline-style</code></li>
+            <li><code>outline-color</code></li>
+            <li>
+                <code>outline-offset</code>: Genera otro borde externo, (que no hace parte
+                de la caja), pero dejando una distancia del borde externo de la caja. <br>
+                El valor qeu se le da a esta propiedad puede ser positivo o negativo.
+            </li>
+        </ul>
+        </p>
+        <p>
+            Los elementos donde masa se puede usar la propiedad outline son loe elementos de
+            formulario como input, textarea, checkbox, radioboton.
+        </p>
 
         <h3>Ejemplos:</h3>
+        <div class="box outline">Outline</div>
+        <div class="input" style="text-align: center;">
+            <input type="text">
+        </div>
+
 
         <br>
         <a href="index.html#inicio" class="volver-inicio">◀️ Volver a pagina principal</a>
-        <a href="border-outline.html#inicio-bordes-outlines" class="volver-inicio">🔼 Ir a Bordes y outlines</a>
+        <a href="border-outline.html#inicio-bordes-outlines" class="volver-inicio">🔼 Ir a inicio Bordes y outlines</a>
         <hr>
     </article>
 
