--- a/index.html
+++ b/index.html
@@ -223,8 +223,30 @@
                     <a href="border-outline.html#border-radius">Propiedad border-radius</a>
                 </li>
                 <li><a href="border-outline.html#outline">Propiedad outline</a></li>
+                <li><a href="border-outline.html#estilos-fondo">Estilos del Fondo</a></li>
 
+            </ol>
 
+            <li><a href="backgrounds.html#inicio-estilos-fondo">Estilos del Fondo en CSS</a></li>
+            <ol type="a">
+                <li>
+                    <a href="backgrounds.html#background-color">Propiedad <code>background-color</code></a>
+                </li>
+                <li>
+                    <a href="backgrounds.html#background-image">Propiedad <code>background-image</code></a>
+                </li>
+                <li>
+                    <a href="backgrounds.html#background-repeat">Propiedad <code>background-repeat</code></a>
+                </li>
+                <li>
+                    <a href="backgrounds.html#background-size">Propiedad <code>background-size</code></a>
+                </li>
+                <li>
+                    <a href="backgrounds.html#background-position">Propiedad <code>background-position</code></a>
+                </li>
+                <li>
+                    <a href="backgrounds.html#background-clip">Propiedad <code>background-clip</code></a>
+                </li>
             </ol>
 
             <li><a href="index.html#enlaces">Enlaces y links de referencia y documentacion de css</a></li>
