--- a/index.html
+++ b/index.html
@@ -224,7 +224,6 @@
                 </li>
                 <li><a href="border-outline.html#outline">Propiedad outline</a></li>
                 <li><a href="border-outline.html#estilos-fondo">Estilos del Fondo</a></li>
-
             </ol>
 
             <li><a href="backgrounds.html#inicio-estilos-fondo">Estilos del Fondo en CSS</a></li>
@@ -247,6 +246,30 @@
                 <li>
                     <a href="backgrounds.html#background-clip">Propiedad <code>background-clip</code></a>
                 </li>
+                <li>
+                    <a href="backgrounds.html#background-origin">Propiedad <code>background-origin</code></a>
+                </li>
+                <li>
+                    <a href="backgrounds.html#background-attachment">Propiedad <code>background-attachment</code></a>
+                </li>
+                <li>
+                    <a href="backgrounds.html#background">Propiedad <code>background</code></a>
+                </li>
+                <li>
+                    <a href="backgrounds.html#fondos-multiples">Fondos multiples</a>
+                </li>
+            </ol>
+
+            <li>
+                <a href="images.html#inicio-estilos-imagenes">Estilos de imágenes en css</a>
+            </li>
+            <ol type="a">
+                <li><a href="images.html#images-responsive">Imagenes responsive</a></li>
+                <li>
+                    <a href="images.html#imagenes-tamanio-especifico">Imágenes con tamaños especificos</a>
+                </li>
+
+
             </ol>
 
             <li><a href="index.html#enlaces">Enlaces y links de referencia y documentacion de css</a></li>
