--- a/index.html
+++ b/index.html
@@ -268,8 +268,30 @@
                 <li>
                     <a href="images.html#imagenes-tamanio-especifico">Imágenes con tamaños especificos</a>
                 </li>
+            </ol>
 
+            <li>
+                <a href="list-items.html#inicio-estilos-listas">Estilos para listas en css</a>
+            </li>
+            <ol type="a">
+                <li>
+                    <a href="list-items.html#list-style-type">Propiedad list-style-type</a>
+                </li>
+                <li>
+                    <a href="list-items.html#list-style-image">Propiedad list-style-image</a>
+                </li>
+                <li>
+                    <a href="list-items.html#list-style-position">Propiedad list-style-position</a>
+                </li>
+                <li><a href="list-items.html#list-style">Propiedad list-style</a></li>
+                <li><a href="list-items.html#texto-en-columnas">Texto en columnas</a></li>
+            </ol>
 
+            <li>
+                <a href="tables.html#inicio-estilos-tablas">Estilos para tablas en css</a>
+            </li>
+            <ol type="a">
+                <li><a href=""></a></li>
             </ol>
 
             <li><a href="index.html#enlaces">Enlaces y links de referencia y documentacion de css</a></li>
