--- a/index.html
+++ b/index.html
@@ -291,7 +291,10 @@
                 <a href="tables.html#inicio-estilos-tablas">Estilos para tablas en css</a>
             </li>
             <ol type="a">
-                <li><a href=""></a></li>
+                <li>
+                    <a href="tables.html#estilos-tablas">Aplicar estilos a las tablas</a>
+                </li>
+
             </ol>
 
             <li><a href="index.html#enlaces">Enlaces y links de referencia y documentacion de css</a></li>
