--- a/tables.html
+++ b/tables.html
@@ -24,18 +24,42 @@
     <article id="temario-estilos-tablas">
         <h2>Temario Estilos para tablas en css</h2>
         <ol type="a">
-            <li><a href=""></a></li>
+            <li>
+                <a href="tables.html#estilos-tablas">Aplicar estilos a las tablas</a>
+            </li>
         </ol>
 
         <a href="index.html#inicio" class="volver-inicio">◀️ Volver a pagina principal</a>
         <hr>
     </article>
 
-    <article id="">
-        <h2>Titulo</h2>
+    <article id="estilos-tablas">
+        <h2>Aplicar estilos a las tablas</h2>
 
 
         <h3>Ejemplos:</h3>
+        <table class="table">
+            <tr>
+                <th>A</th>
+                <th>B</th>
+                <th>C</th>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>2</td>
+                <td>3</td>
+            </tr>
+            <tr>
+                <td>4</td>
+                <td>5</td>
+                <td>6</td>
+            </tr>
+            <tr>
+                <td>7</td>
+                <td></td>
+                <td>9</td>
+            </tr>
+        </table>
 
         <br>
         <a href="index.html#inicio" class="volver-inicio">◀️ Volver a pagina principal</a>
