--- a/index.html
+++ b/index.html
@@ -296,6 +296,10 @@
 
             </ol>
 
+            <li>
+                <a href="forms.html#inicio-estilos-formularios">Estilos para formularios en css</a>
+            </li>
+
             <li><a href="index.html#enlaces">Enlaces y links de referencia y documentacion de css</a></li>
         </ol>
         <hr>
