--- a/index.html
+++ b/index.html
@@ -300,6 +300,17 @@
                 <a href="forms.html#inicio-estilos-formularios">Estilos para formularios en css</a>
             </li>
 
+            <li>
+                <a href="visual-effects.html#">Efectos visuales en CSS</a>
+            </li>
+            <ol type="a">
+                <li><a href="visual-effects.html#sombras">Efectos de sombras</a></li>
+                <li>
+                    <a href="visual-effects.html#degradados">Degradados (gradients) en CSS</a>
+                </li>
+
+            </ol>
+
             <li><a href="index.html#enlaces">Enlaces y links de referencia y documentacion de css</a></li>
         </ol>
         <hr>
