--- a/index.html
+++ b/index.html
@@ -308,6 +308,12 @@
                 <li>
                     <a href="visual-effects.html#degradados">Degradados (gradients) en CSS</a>
                 </li>
+                <li>
+                    <a href="visual-effects.html#repetir-degradados">Repetir degradados</a>
+                </li>
+                <li>
+                    <a href="visual-effects.html#graficas-con-degradados">Gráficas con degradados</a>
+                </li>
 
             </ol>
 
