--- a/visual-effects.html
+++ b/visual-effects.html
@@ -28,6 +28,12 @@
             <li>
                 <a href="visual-effects.html#degradados">Degradados (gradients) en CSS</a>
             </li>
+            <li>
+                <a href="visual-effects.html#repetir-degradados">Repetir degradados</a>
+            </li>
+            <li>
+                <a href="visual-effects.html#graficas-con-degradados">Gráficas con degradados</a>
+            </li>
         </ol>
 
         <a href="index.html#inicio" class="volver-inicio">◀️ Volver a pagina principal</a>
@@ -118,6 +124,52 @@
         <hr>
     </article>
 
+    <article id="repetir-degradados">
+        <h2>Repetir degradados</h2>
+        <p>
+            Hay tres tipos de repeticiones de degradados:
+        </p>
+
+        <h3>repeat-gradient-linear</h3>
+        <p>
+            Utilizamos la propiedad <code>background-image</code> con el valor
+            <code>repeating-linear-gradient()</code>.
+        </p>
+        <p>Se genera un patron de repeticion linear.</p>
+        <div class="box repeat-gradient-linear"></div>
+
+        <h3>repeat-gradient-radial</h3>
+        <p>
+            Utilizamos la propiedad <code>background-image</code> con el valor
+            <code>repeating-radial-gradient()</code>.
+        </p>
+        <div class="box repeat-gradient-radial"></div>
+
+        <h3>repeat-gradient-conic</h3>
+        <p>
+            Utilizamos la propiedad <code>background-image</code> con el valor
+            <code>repeating-conic-gradient()</code>.
+        </p>
+        <div class="box repeat-gradient-conic"></div>
+
+        <a href="index.html#inicio" class="volver-inicio">◀️ Volver a pagina principal</a>
+        <a href="visual-effects.html#inicio-efectos-visuales" class="volver-inicio">🔼 Ir a inicio efectos visuales</a>
+        <hr>
+    </article>
+
+    <article id="graficas-con-degradados">
+        <h2>Gráficas con degradados</h2>
+
+        <h3>Grafico de pastel o circular</h3>
+        <div class="box chart-gradient"></div>
+
+        <h3>Grafica en forma de dona</h3>
+        <div class="box donut-gradient"></div>
+
+        <a href="index.html#inicio" class="volver-inicio">◀️ Volver a pagina principal</a>
+        <a href="visual-effects.html#inicio-efectos-visuales" class="volver-inicio">🔼 Ir a inicio efectos visuales</a>
+        <hr>
+    </article>
 </body>
 
 </html>
