--- a/index.html
+++ b/index.html
@@ -314,6 +314,27 @@
                 <li>
                     <a href="visual-effects.html#graficas-con-degradados">Gráficas con degradados</a>
                 </li>
+                <li><a href="visual-effects.html#filters">Filtros (filter)</a></li>
+                <li>
+                    <a href="visual-effects.html#filtros-multiples">Filtros múltiples a un mismo elemento</a>
+                </li>
+                <li>
+                    <a href="visual-effects.html#filtros-fondos">Filtros a fondos (backdrop-filter)</a>
+                </li>
+                <li>
+                    <a href="visual-effects.html#filtros-multiples-fondos">Filtros multiples a fondos</a>
+                </li>
+                <li>
+                    <a href="visual-effects.html#modo-dark-light">Modo Dark/Light con filtros</a>
+                </li>
+                <li>
+                    <a href="visual-effects.html#modos-de-mezcla">Modos de Mezcla sobre imagenes (mix-blend-mode)</a>
+                </li>
+                <li>
+                    <a href="visual-effects.html#modos-mezcla-fondos">Modos de Mezcla sobre
+                        imagenes de fondos (background-blend-mode)</a>
+                </li>
+                <li><a href="visual-effects.html#mascaras">Máscaras (clip-path)</a></li>
 
             </ol>
 
