--- a/visual-effects.html
+++ b/visual-effects.html
@@ -55,6 +55,7 @@
                     imagenes de fondos (background-blend-mode)</a>
             </li>
             <li><a href="visual-effects.html#mascaras">Máscaras (clip-path)</a></li>
+            <li><a href="visual-effects.html#formas">Formas (shape-outside)</a></li>
         </ol>
 
         <a href="index.html#inicio" class="volver-inicio">◀️ Volver a pagina principal</a>
@@ -340,7 +341,144 @@
 
     <article id="mascaras">
         <h2>Máscaras (clip-path)</h2>
+        <p>
+            Para poder aplicar el efecto de enmascaramiento hay que hacer uso de una
+            propiedad que se llama <code>clip-path</code> y esta hace uso de cuatro
+            valores:
+        </p>
 
+        <ul>
+            <li>
+                <code>circle()</code>: Dentro de los parentesis se puede especificar
+                el radio del circulo.
+
+                <article class="card clip-path-circle">
+                    <img src="assets/puesta-sol.jpg" alt="Puesta de sol">
+                </article>
+            </li>
+            <li>
+                <code>ellipse()</code>: Dentro de los parentesis se puede especificar
+                el radio del elipse, el primer valor del radio es para el eje X, el segundo
+                valor del radio es para el eje Y.
+
+                <article class="card clip-path-ellipse">
+                    <img src="assets/puesta-sol.jpg" alt="Puesta de sol">
+                </article>
+            </li>
+            <li>
+                <code>inset()</code>: Funciona muy parecido al modle de caja, se le dan dos
+                valores dentro de los parentesis, el primer valor es para las verticales
+                <code>top</code> y <code>botton</code>, el segundo valor para los laterales
+                <code>right</code> y <code>left</code>.
+
+                <article class="card clip-path-inset">
+                    <img src="assets/puesta-sol.jpg" alt="Puesta de sol">
+                </article>
+            </li>
+            <li>
+                <code>polygon()</code>: Enlace a sitio <a href="https://bennettfeely.com/clippy/"
+                    target="_blank">clip-path generator</a>.
+
+                <article class="card clip-path-polygon">
+                    <img src="assets/puesta-sol.jpg" alt="Puesta de sol">
+                </article>
+            </li>
+        </ul>
+
+        <a href="index.html#inicio" class="volver-inicio">◀️ Volver a pagina principal</a>
+        <a href="visual-effects.html#inicio-efectos-visuales" class="volver-inicio">🔼 Ir a inicio efectos visuales</a>
+        <hr>
+    </article>
+
+    <article id="formas">
+        <h2>Formas (shape-outside)</h2>
+
+        <article class="shapes">
+            <h3>Ejemplos de formas y siluetas entre textos e imagenes</h3>
+
+            <img src="assets/puesta-sol.jpg" alt="Puesta de sol" class="float-left shape-1">
+            <article>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo ipsum
+                    similique saepe fugit, totam mollitia odio perspiciatis at deleniti vel
+                    laudantium corporis commodi impedit fuga dolor accusantium debitis sapiente
+                    dicta.
+                </p>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo ipsum
+                    similique saepe fugit, totam mollitia odio perspiciatis at deleniti vel
+                    laudantium corporis commodi impedit fuga dolor accusantium debitis sapiente
+                    dicta.
+                </p>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo ipsum
+                    similique saepe fugit, totam mollitia odio perspiciatis at deleniti vel
+                    laudantium corporis commodi impedit fuga dolor accusantium debitis sapiente
+                    dicta.
+                </p>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo ipsum
+                    similique saepe fugit, totam mollitia odio perspiciatis at deleniti vel
+                    laudantium corporis commodi impedit fuga dolor accusantium debitis sapiente
+                    dicta.
+                </p>
+            </article>
+
+            <img src="assets/puesta-sol.jpg" alt="Puesta de sol" class="float-right shape-2">
+            <article>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo ipsum
+                    similique saepe fugit, totam mollitia odio perspiciatis at deleniti vel
+                    laudantium corporis commodi impedit fuga dolor accusantium debitis sapiente
+                    dicta.
+                </p>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo ipsum
+                    similique saepe fugit, totam mollitia odio perspiciatis at deleniti vel
+                    laudantium corporis commodi impedit fuga dolor accusantium debitis sapiente
+                    dicta.
+                </p>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo ipsum
+                    similique saepe fugit, totam mollitia odio perspiciatis at deleniti vel
+                    laudantium corporis commodi impedit fuga dolor accusantium debitis sapiente
+                    dicta.
+                </p>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo ipsum
+                    similique saepe fugit, totam mollitia odio perspiciatis at deleniti vel
+                    laudantium corporis commodi impedit fuga dolor accusantium debitis sapiente
+                    dicta.
+                </p>
+            </article>
+            <img src="assets/puesta-sol.jpg" alt="Puesta de sol" class="float-left shape-3">
+            <article>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo ipsum
+                    similique saepe fugit, totam mollitia odio perspiciatis at deleniti vel
+                    laudantium corporis commodi impedit fuga dolor accusantium debitis sapiente
+                    dicta.
+                </p>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo ipsum
+                    similique saepe fugit, totam mollitia odio perspiciatis at deleniti vel
+                    laudantium corporis commodi impedit fuga dolor accusantium debitis sapiente
+                    dicta.
+                </p>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo ipsum
+                    similique saepe fugit, totam mollitia odio perspiciatis at deleniti vel
+                    laudantium corporis commodi impedit fuga dolor accusantium debitis sapiente
+                    dicta.
+                </p>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo ipsum
+                    similique saepe fugit, totam mollitia odio perspiciatis at deleniti vel
+                    laudantium corporis commodi impedit fuga dolor accusantium debitis sapiente
+                    dicta.
+                </p>
+            </article>
+        </article>
 
 
         <a href="index.html#inicio" class="volver-inicio">◀️ Volver a pagina principal</a>
