--- a/index.html
+++ b/index.html
@@ -335,8 +335,18 @@
                         imagenes de fondos (background-blend-mode)</a>
                 </li>
                 <li><a href="visual-effects.html#mascaras">Máscaras (clip-path)</a></li>
-
+                <li><a href="visual-effects.html#formas">Formas (shape-outside)</a></li>
             </ol>
+
+            <li>
+                <a href="scroll-one-page.html#inicio-efectos-scroll">Efectos con scroll,
+                    propiedad <code>scroll-margin-top</code> (<small>Sitio one page</small>)</a>
+            </li>
+
+            <li>
+                <a href="scroll-snap-slides.html">Ajuste del Scroll, Efecto Slides
+                    Verticales (scroll-snap-type & scroll-snap-align)</a>
+            </li>
 
             <li><a href="index.html#enlaces">Enlaces y links de referencia y documentacion de css</a></li>
         </ol>
