--- a/scroll-snap-slides.html
+++ b/scroll-snap-slides.html
@@ -23,7 +23,7 @@
             <article class="slide-container">
                 <h1>Ajuste del Scroll, Efecto Slides
                     Verticales (scroll-snap-type & scroll-snap-align)</h1>
-                <a href="index.html#inicio" class="volver-inicio">◀️ Volver a a pagina principal</a>
+                <a href="index.html#inicio" class="volver-inicio">◀️ Volver a pagina principal</a>
             </article>
         </secttion>
         <secttion class="slide">
